crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__single-letter.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..1
  run "x" @0..1
-- problems --
