crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__word-and-number.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..6
  run "x" @0..1
  run "=" @2..3
  run "42" @4..6
-- problems --
